--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
 .clear:before, .clear:after {
   content: ' ';
   display: table; }
@@ -380,16 +381,48 @@ textarea {
 
 html {
   font-size: 62.5%;
-  background: #ed254e; }
+  background: #fafafa; }
 
 body {
-  font: 300 13px/1.6 'Helvetica Neue', Helvetica, Arial;
-  color: #fff;
+  font-family: 'Helvetica Neue', Helvetica, Arial;
+  line-height: 1.6;
+  font-size: 16px;
+  color: #444;
   transition: all .4s .3s ease-in; }
 
 body, html {
-  min-height: 100vh;
-  overflow: hidden; }
+  min-height: 100vh; }
+
+body {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: normal;
+  color: #444;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.6; }
+
+h1, h2, h3, h4, h5, h6 {
+  color: #444;
+  font-weight: 700;
+  line-height: 1.2; }
+
+h1 {
+  font-size: 2.25em; }
+
+h2 {
+  font-size: 2em; }
+
+h3 {
+  font-size: 1.75em; }
+
+h4 {
+  font-size: 1.5em; }
+
+h5 {
+  font-size: 1.25em; }
+
+h6 {
+  font-size: 1em; }
 
 .container {
   width: 90%;
@@ -494,13 +527,6 @@ body, html {
     width: 96%; }
   .hidden-sm {
     display: block; } }
-
-@font-face {
-  font-family: 'Font-Name';
-  src: url("../fonts/font-name.eot");
-  src: url("../fonts/font-name.eot?#iefix") format("embedded-opentype"), url("../fonts/font-name.woff") format("woff"), url("../fonts/font-name.ttf") format("truetype"), url("../fonts/font-name.svg#font-name") format("svg");
-  font-weight: normal;
-  font-style: normal; }
 
 ::selection {
   background: #333;
